# VolumetricParticles

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  LICENSE  README.md
blender/: SceneExporter.py
data/Scene/: Cube.019.ply  Plane.ply  TestScene.scene
source/: Application.cpp  Application.h  Camera.cpp  Camera.h  Main.cpp  Timer.cpp  Timer.h  Window.cpp  Window.h
source/fileIO/: FileDialog.cpp  FileDialog.h  OutputManager.cpp  OutputManager.h
source/input/: InputHandler.cpp  InputHandler.h  InputProps.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
source/renderer/: MeshRenderable.cpp  MeshRenderable.h  ParticleSystemRenderable.cpp  ParticleSystemRenderable.h  SceneRenderer.cpp  SceneRenderer.h  ShadowMap.cpp  ShadowMap.h
source/renderer/passResources/: FrameBufferManager.cpp  FrameBufferManager.h  RenderPassManager.cpp  RenderPassManager.h  ShaderBindingManager.cpp  ShaderBindingManager.h  ShaderManager.cpp  ShaderManager.h
source/renderer/passes/: GuiPass.cpp  GuiPass.h  MeshPass.cpp  MeshPass.h  Pass.cpp  Pass.h  PassManager.cpp  PassManager.h  Passes.cpp  Passes.h  PostProcessPass.cpp  PostProcessPass.h  ShadowMapPass.cpp  ShadowMapPass.h  VolumePass.cpp  VolumePass.h
source/renderer/pipelineState/: BlendState.cpp  BlendState.h  DepthStencilState.h  DynamicState.cpp  DynamicState.h  InputAssemblyState.h  MultisampleState.h  PipelineState.cpp  PipelineState.h  RasterizationState.h  ViewportState.cpp  ViewportState.h
source/renderer/resources/: BufferManager.cpp  BufferManager.h  ImageManager.cpp  ImageManager.h  QueueManager.cpp  QueueManager.h
source/renderer/scene/: RenderScene.cpp  RenderScene.h  UniformGrid.cpp  UniformGrid.h
source/renderer/scene/adaptiveGrid/: AdaptiveGrid.cpp  AdaptiveGrid.h  AdaptiveGridConstants.h  AdaptiveGridData.h  DebugTraversal.cpp  DebugTraversal.h  GridLevel.cpp  GridLevel.h  GroundFog.cpp  GroundFog.h  ImageAtlas.cpp  ImageAtlas.h  MipMapping.cpp  MipMapping.h  NeighborCells.cpp  NeighborCells.h  Node.cpp  Node.h
source/renderer/scene/adaptiveGrid/debug/: DebugData.cpp  DebugData.h  DebugTraversal.cpp  DebugTraversal.h  HelperFunctions.cpp  HelperFunctions.h
source/renderer/scene/adaptiveGrid/subpasses/: DebugFilling.cpp  DebugFilling.h  GlobalVolume.cpp  GlobalVolume.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystems.cpp  ParticleSystems.h
source/renderer/scene/renderables/: Frustum.cpp  Frustum.h  Material.cpp  Material.h  MeshData.cpp  MeshData.h
source/renderer/wrapper/: Barrier.cpp  Barrier.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  Instance.cpp  Instance.h  MemoryAllocator.cpp  MemoryAllocator.h  PhysicalDevice.cpp  PhysicalDevice.h  QueryPool.cpp  QueryPool.h  Surface.cpp  Surface.h  Synchronization.cpp  Synchronization.h  TimeStamps.h
source/scene/: ComponentVector.h  Components.cpp  Components.h  ParticleSystem.cpp  ParticleSystem.h  ResourceLoader.cpp  ResourceLoader.h  Scene.cpp  Scene.h
source/scene/components/: AABoundingBox.cpp  AABoundingBox.h  MaterialInfo.h  ParticleSystemInfo.h
source/scene/grid/: Grid.cpp  Grid.h
source/shaders/: GridDebugFilling.comp  GridGlobal.comp  GridGroundFog.comp  GridMediaVolume.comp  GridMipMapping.comp  GridMipMappingFilling.comp  GridMipMappingMerging.comp  GridNeighborUpdate.comp  GridParticles.comp  GridRaymarching.comp  GridRaymarching_Old.comp  Gui.frag  Gui.vert  Mesh.frag  Mesh.vert  Mesh_DepthOnly.frag  Mesh_DepthOnly.vert  PostProcess.frag  PostProcess.vert  PostProcess_Debug.frag  PostProcess_Debug.vert  ShadowMap.frag  ShadowMap.vert
source/shaders/include/: GridConstants.comp  ImageOffset.comp  Precision.comp  SimplexNoise.comp
source/shaders/raymarching/: BruteForce.comp  Constants.comp  GridTraversal.comp  Integration.comp  Intersection.comp  Raymarching.comp  Resources.comp  Steps.comp
source/utility/: Math.cpp  Math.h  Status.cpp  Status.h
